--- a/templates/user_guide.html
+++ b/templates/user_guide.html
@@ -15,7 +15,7 @@
       </div>
       <nav class="app-nav portal-nav" aria-label="Main navigation">
         <a class="app-link" href="/">Portal Home</a>
-        <a class="app-link" href="/changelog">Changelog</a>
+        <a class="app-link" href="/whats-new">What's New</a>
         <a class="app-link" href="https://uwm.edu/ipit/wi-pedbike-dashboard/" target="_blank" rel="noopener noreferrer">Program Home</a>
       </nav>
       <div class="app-user">Signed in as <strong>{{ user }}</strong> · <a href="/logout">Log out</a></div>
