Stop tracking bundled AccSafety logo asset

--- a/templates/user_guide.html
+++ b/templates/user_guide.html
@@ -9,6 +9,7 @@
 <body>
   <div class="app-shell guide-shell">
     <header class="app-header">
+      <img src="/static/img/accsafety-logo.png" alt="AccSafety logo" class="app-logo">
       <div class="app-header-title">
         <span class="app-brand">AccSafety</span>
         <span class="app-subtitle">Portal User Guide</span>
