--- a/templates/whats_new.html
+++ b/templates/whats_new.html
@@ -9,6 +9,7 @@
 <body>
   <div class="app-shell whats-new-shell">
     <header class="app-header">
+      <img src="/static/img/accsafety-logo.png" alt="AccSafety logo" class="app-logo">
       <div class="app-header-title">
         <span class="app-brand">AccSafety</span>
         <span class="app-subtitle">Release Highlights</span>
